--- a/src/app/mainView-feature/components/pageTitleAndButtons/pageTitleAndButtons.component.html
+++ b/src/app/mainView-feature/components/pageTitleAndButtons/pageTitleAndButtons.component.html
@@ -1,7 +1,7 @@
 <div class="flex justify-between items-center mb-6">
   <h1 class="text-2xl font-bold text-gray-900">Facturación</h1>
   <div>
-    <button class="bg-orange-500 outline-1 outline-gray-300 hover:bg-orange-600 text-white px-4 py-2 rounded">
+    <button [routerLink]="['/billproccess']" class="bg-orange-500 outline-1 outline-gray-300 hover:bg-orange-600 text-white px-4 py-2 rounded">
       <span class="mr-1">+</span> Nueva Factura
     </button>
   </div>
