--- a/src/app/proccess-bill/pages/proccess-bill-page/proccess-bill-page.component.html
+++ b/src/app/proccess-bill/pages/proccess-bill-page/proccess-bill-page.component.html
@@ -3,6 +3,9 @@
   Includes navigation bar, stepper, and action buttons
 -->
 <div class="w-full flex flex-col">
+  <!-- Contenedor de alertas -->
+  <app-alert-container></app-alert-container>
+
   <!-- Navigation bar component -->
   <app-nav-bar-home />
 
