--- a/src/app/landing-feature/pages/landing-page/landing-page.component.css
+++ b/src/app/landing-feature/pages/landing-page/landing-page.component.css
@@ -7,6 +7,43 @@
   background-position: center;
   background-attachment: fixed;
   background-color: whitesmoke;
+  overflow-x: hidden;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7));
+  z-index: 1;
+}
 
+/* Responsive media queries */
+@media (max-width: 1280px) {
+  h1 {
+    font-size: calc(1.5rem + 2vw);
+  }
+
+  h2, h3 {
+    font-size: calc(1rem + 1vw);
+  }
+}
+
+@media (max-width: 768px) {
+  .background-container {
+    background-attachment: scroll;
+  }
+
+  h1 br {
+    display: none;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
