add new navigation

--- a/src/app/shared/components/navBarLanding/navBar.component.html
+++ b/src/app/shared/components/navBarLanding/navBar.component.html
@@ -28,8 +28,8 @@
     <nav class="hidden md:flex flex-1 items-center justify-end mx-4 lg:mx-10">
       <ul class="flex">
         <li class="mx-2 lg:mx-4">
-          <a [routerLink]="['/']" routerLinkActive="text-orange-500" [routerLinkActiveOptions]="{exact: true}" class="text-black text-sm font-semibold uppercase transition-colors hover:text-orange-500">
-            INICIO
+          <a [routerLink]="['/billproccess']" routerLinkActive="text-orange-500" [routerLinkActiveOptions]="{exact: true}" class="text-black text-sm font-semibold uppercase transition-colors hover:text-orange-500">
+            FACTURACIÓN
           </a>
         </li>
         <li class="mx-2 lg:mx-4">
