add navigate on login/register to billingprocess

--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -43,7 +43,8 @@
           Registrarse
         </button>
         <button
-          type="submit"
+          type="button"
+          [routerLink]="'/billproccess'"
           class="w-full bg-[#E8E8E8] text-black font-bold py-2 rounded-md hover:bg-gray-100 transition-colors outline-2 outline-gray-300">
           Continuar como invitado
         </button>
