--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 @if (show) {
-  <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 transition-opacity duration-300">
+  <div class="fixed inset-0 z-50 flex items-center justify-center  bg-opacity-50 transition-opacity duration-300">
     <div
       class="bg-white rounded-lg shadow-xl max-w-md w-full mx-4 transform transition-transform duration-300"
       [ngClass]="{'scale-100 opacity-100': show, 'scale-95 opacity-0': !show}"
