--- a/src/app/proccess-bill/components/basic-info/basic-info.component.html
+++ b/src/app/proccess-bill/components/basic-info/basic-info.component.html
@@ -3,13 +3,17 @@
     <h3 class="text-xl font-semibold mb-5">Información básica</h3>
 
     <!-- Form adapted to the design of the image -->
-    <form (ngSubmit)="onSubmit()" class="grid grid-cols-1 md:grid-cols-3 gap-x-4 gap-y-3">
+    <form
+      (ngSubmit)="onSubmit()"
+      class="grid grid-cols-1 md:grid-cols-3 gap-x-4 gap-y-3"
+    >
       <!-- First row: RFC, Name, Mail -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           RFC Cliente (mayus)
         </label>
         <input
+          name="rfc"
           id="rfc"
           type="text"
           placeholder="RFC Cliente"
@@ -24,6 +28,7 @@
           Nombre
         </label>
         <input
+          name="nombre"
           id="nombre"
           type="text"
           placeholder="Nombre"
@@ -38,6 +43,7 @@
           Correo
         </label>
         <input
+          name="correo"
           id="correo"
           type="email"
           placeholder="Correo"
@@ -49,10 +55,9 @@
 
       <!-- Second row: ZIP code, State, City -->
       <div>
-        <label class="block text-sm font-medium text-gray-700 mb-1">
-          CP
-        </label>
+        <label class="block text-sm font-medium text-gray-700 mb-1"> CP </label>
         <input
+          name="cp"
           id="cp"
           type="text"
           placeholder="CP"
@@ -67,6 +72,7 @@
           Estado
         </label>
         <input
+          name="estado"
           id="estado"
           type="text"
           placeholder="Estado"
@@ -81,6 +87,7 @@
           Ciudad
         </label>
         <input
+          name="ciudad"
           id="ciudad"
           type="text"
           placeholder="Ciudad"
@@ -96,6 +103,7 @@
           Colonia
         </label>
         <input
+          name="colonia"
           id="colonia"
           type="text"
           placeholder="Colonia"
@@ -110,6 +118,7 @@
           Calle
         </label>
         <input
+          name="calle"
           id="calle"
           type="text"
           placeholder="Calle"
@@ -124,6 +133,7 @@
           Número Ext
         </label>
         <input
+          name="numeroExt"
           id="numeroExt"
           type="text"
           placeholder="Número Ext"
