--- a/src/app/proccess-bill/templates/verificacion-template/verificacion-template.component.html
+++ b/src/app/proccess-bill/templates/verificacion-template/verificacion-template.component.html
@@ -14,6 +14,5 @@
   </p>
 
   <!-- Basic information component -->
-  <app-basic-info>
-  </app-basic-info>
+  <app-basic-info [dataBillAdapter]="dataBill"/>
 </section>
