working on improve

--- a/src/app/proccess-bill/templates/situation-fiscal-template/situation-fiscal-template.component.html
+++ b/src/app/proccess-bill/templates/situation-fiscal-template/situation-fiscal-template.component.html
@@ -17,7 +17,7 @@
 
     <!-- Second section: Service selection -->
     <section class="w-full md:w-1/2">
-      <select-service-bill/>
+      <select-service-bill [typeFacturations]="servicesType" [selectedTypeFacturation]="serviceType"/>
     </section>
   </main>
 </section>
