--- a/src/app/proccess-bill/components/select-service/select-service.component.html
+++ b/src/app/proccess-bill/components/select-service/select-service.component.html
@@ -38,14 +38,14 @@
         class="block w-full py-2 pl-4 pr-10 border border-gray-300 rounded-md appearance-none
                focus:outline-none focus:ring-yellow-400 focus:border-[#FC7516] text-gray-500
                bg-white shadow-sm shadow-black/10"
-        [ngModel]="selectedService()"
+        [ngModel]="selectedService"
         name="servicioFacturacion"
         (change)="onServiceChange($event)">
-        @for (type of typeFacturations(); track $index) {
+        @for (type of typeFacturations; track $index) {
           <option
-            [value]="type"
+            [value]="type.id"
             class="text-gray-700">
-            {{type}}
+            {{type.name}}
           </option>
         }
       </select>
